Fix cutoff long word on button

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -91,6 +91,7 @@ html, body {
       font-weight: normal;
       text-transform: none;
       background: white;
+      white-space: normal;
     }
   }
 
